Fix lỗi căn giữa chữ

--- a/index.html
+++ b/index.html
@@ -18,10 +18,20 @@ canvas {
   width: 100%;
   height: 100%;
 }
-.chu{
-    color: rgb(75, 232, 243);
-    padding-top: 20%;
-    text-align: center;
+body {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: black;
+}
+
+.chu {
+  color: rgb(75, 232, 243);
+  text-align: center;
+  margin: 5px 0;
 
 }
   </style>
